--- a/index.html.html
+++ b/index.html.html
@@ -119,18 +119,18 @@
       <br>
       <a href="https://www.facebook.com/eleazar.rosas.50">
        <figure>
-         <img src="img/facebook.jpg" width="90px" alt="facebook" name="Facebook" >
+         <img src="facebook.jpg" width="90px" alt="facebook" name="Facebook" >
        </figure>
      </a>
 
      <a href="https://www.instagram.com/eleazarrosas_p/">
         <figure>
-          <img src="img/instagram.jpg" alt="instagram">
+          <img src="instagram.jpg" alt="instagram">
         </figure>
       </a>
       <a href="https://www.linkedin.com/in/eleazar-rosas-8329521b0">
         <figure>
-          <img src="img/ln.png" alt="Linkedin">
+          <img src="ln.png" alt="Linkedin">
         </figure>
       </href>
   </aside> <!-- Fin aside -->
