--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <meta http‐equiv="refresh" content="20;URL=./2PantillaBasica.htm" >
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Divisones Sem&aacute;ticas</title>
-  <link rel="stylesheet" type="text/css" href="css/normalize.css" >
-  <link rel="stylesheet" type="text/css" href="css/estiloBasico.css">
+  <link rel="stylesheet" type="text/css" href="normalize.css" >
+  <link rel="stylesheet" type="text/css" href="estiloBasico.css">
 </head>
 <Style>
   l1{
@@ -119,18 +119,18 @@
       <br>
       <a href="https://www.facebook.com/eleazar.rosas.50">
        <figure>
-         <img src="img/facebook.jpg" width="90px" alt="facebook" name="Facebook" >
+         <img src="facebook.jpg" width="90px" alt="facebook" name="Facebook" >
        </figure>
      </a>
 
      <a href="https://www.instagram.com/eleazarrosas_p/">
         <figure>
-          <img src="img/instagram.jpg" alt="instagram">
+          <img src="instagram.jpg" alt="instagram">
         </figure>
       </a>
       <a href="https://www.linkedin.com/in/eleazar-rosas-8329521b0">
         <figure>
-          <img src="img/ln.png" alt="Linkedin">
+          <img src="ln.png" alt="Linkedin">
         </figure>
       </href>
   </aside> <!-- Fin aside -->
